# notion-client

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.build/: make-release.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  release.yml
examples/: list_all_users.rs  query_a_database.rs  retrieve_a_block.rs  retrieve_a_database.rs  retrieve_a_page.rs  search_by_title.rs
src/: endpoints.rs  lib.rs  objects.rs
src/endpoints/: blocks.rs  comments.rs  data_sources.rs  databases.rs  pages.rs  search.rs  users.rs
src/endpoints/blocks/: append.rs  children.rs  delete.rs  retrieve.rs  tests.rs  update.rs
src/endpoints/blocks/append/: request.rs  response.rs
src/endpoints/blocks/tests/: append_200.json  append_request.json  delete_200.json  link_mention_mention_deserialization.json  retrieve_200.json  retrieve_block_children_200.json  synced_from_block.json  update_200.json  update_400.json  update_request.json
src/endpoints/blocks/update/: request.rs
src/endpoints/comments/: create.rs  retrieve.rs  tests.rs
src/endpoints/comments/create/: request.rs
src/endpoints/data_sources/: create.rs  query.rs  retrieve.rs  update.rs
src/endpoints/databases/: create.rs  query.rs  retrieve.rs  tests.rs  update.rs
src/endpoints/pages/: create.rs  retrieve.rs  tests.rs  update.rs
src/endpoints/search/: tests.rs  title.rs
src/endpoints/users/: list.rs  retrieve.rs  tests.rs
src/objects/: block.rs  comment.rs  data_source.rs  database.rs  emoji.rs  error.rs  file.rs  icon.rs  native_icon.rs  page.rs  parent.rs  property.rs  rich_text.rs  tests.rs  user.rs
src/objects/tests/: block.json  callout.json  callout_icon_null.json  comment.json  custom_emoji.json  emoji.json  error.json  external_file.json  external_icon.json  file.json  mention_date.json  native_icon.json  page.json  page_native_icon.json  rich_text.json
(+39 files in other folders)
