[package]
name = "notion-client"
version = "1.0.4"
authors = ["Takashi Kasai <takassh23@gmail.com>"]
edition = "2021"
repository = "https://github.com/takassh/notion-client"
readme = "README.md"
description = "A Notion API Client for Rust"
license = "MIT"


[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
derive_builder = "0.20.0"
reqwest = "0.11.24"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_with = { version = "3.6.1", features = ["macros"] }
thiserror = "1.0.56"
urlencoding = "2.1.3"

[dev-dependencies]
notion-client = { path = "." }
tokio = { version = "1.10.0", features = ["full"] }
